--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+ProblemSolv3_1_2/[Ll]ibrary/
+ProblemSolv3_1_2/[Tt]emp/
+ProblemSolv3_1_2/[Oo]bj/
+ProblemSolv3_1_2/[Bb]uild/
+ProblemSolv3_1_2/[Bb]uilds/
+ProblemSolv3_1_2/[Ll]ogs/
+ProblemSolv3_1_2/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
@@ -70,4 +70,3 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
-출처: https://i-believe-in-me.tistory.com/148 [Do you believe in you?:티스토리]
